# AnimHost

./: .gitignore  .gitmodules  INFERENCE.md  LICENSE.txt  LICENSE_Info.txt  README.md  TRAINING.md  Train.md
AnimHost/: CMakeLists.txt  CMakePresets.json  animhost.pro  vcpkg.json
AnimHost/animHostApp/: CMakeLists.txt  main.cpp
AnimHost/animHost_Plugins/: CMakeLists.txt  CollectionGenerator.py  NewPluginGenerator.py  plugins.pro
AnimHost/animHost_Plugins/AnimationFrameSelectorPlugin/: AnimationFrameSelectorPlugin.cpp  AnimationFrameSelectorPlugin.h  AnimationFrameSelectorPlugin_global.h  CMakeLists.txt
AnimHost/animHost_Plugins/AssimpLoader/: CMakeLists.txt  assimphelper.cpp  assimphelper.h  assimploaderplugin.cpp  assimploaderplugin.h  assimploaderplugin_global.h
AnimHost/animHost_Plugins/BasicOnnxPlugin/: .gitignore  BasicOnnxPlugin.cpp  BasicOnnxPlugin.h  BasicOnnxPlugin_global.h  CMakeLists.txt  OnnxHelper.h  OnnxModel.cpp  OnnxModel.h  OnnxModelViewWidget.cpp  OnnxModelViewWidget.h  OnnxTensor.cpp  OnnxTensor.h
AnimHost/animHost_Plugins/CharacterSelectorPlugin/: CMakeLists.txt  CharacterSelectorPlugin.cpp  CharacterSelectorPlugin.h  CharacterSelectorPlugin_global.h
AnimHost/animHost_Plugins/CoordinateConverterPlugin/: CMakeLists.txt  CoordinateConverterPlugin.cpp  CoordinateConverterPlugin.h  CoordinateConverterPlugin_global.h
AnimHost/animHost_Plugins/DataExportPlugin/: CMakeLists.txt  DataExportPlugin.cpp  DataExportPlugin.h  DataExportPlugin_global.h
AnimHost/animHost_Plugins/DeepLocomotionPlugin/: CMakeLists.txt  DeepLocomotionPlugin.h  DeepLocomotionPlugin_global.h
AnimHost/animHost_Plugins/DeepLocomotionPlugin/GNN/: GNNController.cpp  GNNController.h  GNNNode.cpp  GNNNode.h  HistoryBuffer.h  PhaseSequence.h  RootSeries.cpp  RootSeries.h
AnimHost/animHost_Plugins/DeepLocomotionPlugin/LocomotionPreprocess/: LocomotionPreprocessNode.cpp  LocomotionPreprocessNode.h
AnimHost/animHost_Plugins/ExamplePlugin/: CMakeLists.txt  ExamplePlugin.pro  exampleplugin.cpp  exampleplugin.h  exampleplugin_global.h
AnimHost/animHost_Plugins/GNNPlugin/: CMakeLists.txt  DummyData.h  GNNController.cpp  GNNController.h  GNNPlugin.cpp  GNNPlugin.h  GNNPlugin_global.h  HistoryBuffer.h  PhaseSequence.cpp  PhaseSequence.h  RootSeries.cpp  RootSeries.h
AnimHost/animHost_Plugins/HelloWorldPlugin/: CMakeLists.txt  HelloWorldPlugin.cpp  HelloWorldPlugin.h  HelloWorldPlugin_global.h
AnimHost/animHost_Plugins/HistoryPlugin/: CMakeLists.txt  HistoryHelper.h  HistoryPlugin.cpp  HistoryPlugin.h  HistoryPlugin_global.h
AnimHost/animHost_Plugins/JointPositionPlugin/: CMakeLists.txt  JointPositionPlugin.cpp  JointPositionPlugin.h  JointPositionPlugin_global.h
AnimHost/animHost_Plugins/JointVelocityPlugin/: CMakeLists.txt  JointVelocityPlugin.cpp  JointVelocityPlugin.h  JointVelocityPlugin_global.h
AnimHost/animHost_Plugins/ModeAdaptivePreprocessPlugin/: CMakeLists.txt  ModeAdaptivePreprocessPlugin.cpp  ModeAdaptivePreprocessPlugin.h  ModeAdaptivePreprocessPlugin_global.h
AnimHost/animHost_Plugins/PluginInterface/: CMakeLists.txt  plugininterface.cpp  plugininterface.h  plugininterface.pro  plugininterface_global.h
AnimHost/animHost_Plugins/PluginNodeInterface/: CMakeLists.txt  pluginnodeinterface.cpp  pluginnodeinterface.h  pluginnodeinterface_global.h
AnimHost/animHost_Plugins/RunTriggerPlugin/: CMakeLists.txt  RunTriggerPlugin.cpp  RunTriggerPlugin.h  RunTriggerPlugin_global.h
AnimHost/animHost_Plugins/TRACERPlugin/: CMakeLists.txt  TRACERGlobalTimer.cpp  TRACERGlobalTimer.h  TRACERPlugin.h  TRACERPlugin_global.h  TRACERUpdateMessage.cpp  TRACERUpdateMessage.h  TRACERUpdateReceiver.cpp  TRACERUpdateReceiver.h
AnimHost/animHost_Plugins/TestDataSourcePlugin/: CMakeLists.txt  TestDataSourcePlugin.cpp  TestDataSourcePlugin.h  TestDataSourcePlugin_global.h
AnimHost/animHost_Plugins/ToyCollectionPlugin/: CMakeLists.txt  ToyAlphaNode.cpp  ToyAlphaNode.h  ToyCollectionPlugin.h  ToyCollectionPlugin_global.h
AnimHost/animHost_Plugins/TracerSceneReceiverPlugin/: CMakeLists.txt  SceneReceiver.cpp  SceneReceiver.h  TracerSceneReceiverPlugin.cpp  TracerSceneReceiverPlugin.h  TracerSceneReceiverPlugin_global.h
AnimHost/animHost_Plugins/TracerUpdateReceiverPlugin/: CMakeLists.txt  TracerUpdateReceiver.h  TracerUpdateReceiverPlugin.cpp  TracerUpdateReceiverPlugin.h  TracerUpdateReceiverPlugin_global.h
AnimHost/animHost_Plugins/TracerUpdateSenderPlugin/: AnimHostMessageSender.cpp  AnimHostMessageSender.h  CMakeLists.txt  TickReceiver.cpp  TickReceiver.h  TracerUpdateSenderPlugin.cpp  TracerUpdateSenderPlugin.h  TracerUpdateSenderPlugin_global.h
AnimHost/animHost_Plugins/TrainFrameworkPlugin/: CMakeLists.txt  TrainFrameworkPlugin.cpp  TrainFrameworkPlugin.h  TrainFrameworkPlugin_global.h
AnimHost/animHost_Plugins/TrainingPlugin/: CMakeLists.txt  TrainingPlugin.cpp  TrainingPlugin.h  TrainingPlugin_global.h
AnimHost/animHost_Plugins/templates/: Node.cpp.template  Node.h.template  NodeCollection.cmake.template  NodeCollection.h.template  NodeCollection_global.h.template
AnimHost/core/: CMakeLists.txt  FileHandler.cpp  FileHandler.h  FrameRange.cpp  FrameRange.h  Logger.cpp  Logger.h  MathUtils.h  SkeletonConfig.h  TimeSeries.h  UIUtils.cpp  UIUtils.h  ZMQMessageHandler.cpp  ZMQMessageHandler.h  animhost.cpp  animhost.h  animhostcore.cpp  animhostcore.h  animhostcore_global.h  animhosthelper.cpp  animhosthelper.h  animhostinputnode.cpp  animhostinputnode.h  animhostnode.cpp  animhostnode.h  animhostoperationnode.cpp  animhostoperationnode.h  commondatatypes.cpp  commondatatypes.h  core.pro  main.cpp  nodedatatypes.h  sourcedatanode.cpp  sourcedatanode.h
AnimHost/core/DataLoader/: assimphelper.cpp  assimphelper.h  assimploadernode.cpp  assimploadernode.h
AnimHost/core/PluginNodeCollectionInterface/: PluginNodeCollectionInterface.cpp  PluginNodeCollectionInterface.h
AnimHost/core/PluginNodeInterface/: pluginnodeinterface.cpp  pluginnodeinterface.h
AnimHost/core/QTNodes/lib/debug/: QtNodes.exp  QtNodes.lib  (+1 more)
AnimHost/core/UI/: DynamicListWidget.cpp  DynamicListWidget.h
(+2485 files in other folders)
