add_subdirectory(PluginInterface)
add_subdirectory(PluginNodeInterface)
add_subdirectory(JointPositionPlugin)
#add_subdirectory(TestDataSourcePlugin)
add_subdirectory(AssimpLoader)
add_subdirectory(BasicOnnxPlugin)
add_subdirectory(AnimationFrameSelectorPlugin)
add_subdirectory(TracerUpdateSenderPlugin)
add_subdirectory(JointVelocityPlugin)
add_subdirectory(DataExportPlugin)
add_subdirectory(RunTriggerPlugin)
add_subdirectory(TracerSceneReceiverPlugin)
add_subdirectory(CharacterSelectorPlugin)
