add_subdirectory(PluginInterface)
add_subdirectory(JointPositionPlugin)
#add_subdirectory(TestDataSourcePlugin)
add_subdirectory(AssimpLoader)
add_subdirectory(BasicOnnxPlugin)
add_subdirectory(AnimationFrameSelectorPlugin)
add_subdirectory(JointVelocityPlugin)
add_subdirectory(DataExportPlugin)
add_subdirectory(RunTriggerPlugin)
add_subdirectory(HistoryPlugin)
#add_subdirectory(ModeAdaptivePreprocessPlugin)
add_subdirectory(CoordinateConverterPlugin)
#add_subdirectory(TracerUpdateReceiverPlugin)
#add_subdirectory(ToyCollectionPlugin)
add_subdirectory(TRACERPlugin)
add_subdirectory(DeepLocomotionPlugin)
add_subdirectory(TrainingPlugin)
